# CodeRefinery

./: .gitignore  CodeRefinery_Project_Report.md  LICENSE  Makefile  README.md  analysis_report.json  demo.sh  demo_results.json  good_example.py  pyproject.toml  test_sample.py
coderefinery/: __init__.py  analyzer.py  cli.py  models.py  utils.py  web_app.py
config/: example_input.json
examples/: example_analysis.py
tests/: test_analyzer.py  test_utils.py
